--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.13.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "parcel": "^2.13.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "sass": "^1.85.0"
   },
   "dependencies": {
     "react": "^19.0.0",
