--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sudoku-web",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "index.js",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel src/index.html --open",
@@ -17,10 +17,13 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "parcel": "^2.13.3",
+    "process": "^0.11.10",
     "sass": "^1.85.0"
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0"
   }
 }
