--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "sass": "^1.85.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0"
   }
