--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react-dom": "^19.0.3",
     "parcel": "^2.13.3",
     "process": "^0.11.10",
-    "sass": "^1.85.0"
+    "sass": "^1.85.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
